# TemporaryProject

./: .travis.yml  CMakeLists.txt  appveyor.yml
include/: Calculator.h
src/: Calculator.cpp
test/: CMakeLists.txt
test/src/: Calculator_Test.cpp
